test/integration/good/function-signatures/distributions/multivariate/discrete/ordered_probit/pretty.expected
  $ ../../../../../../../../../install/default/bin/stanc --auto-format ordered_probit_log.stan
Semantic error in 'ordered_probit_log.stan', line 10, column 26 to column 70:
   -------------------------------------------------
     8:  transformed data {
     9:    real transformed_data_real;
    10:    transformed_data_real = ordered_probit_lpmf(d_int, d_real, d_vector);
                                   ^
    11:    transformed_data_real = ordered_probit_lpmf(d_int_array, d_vector, d_vector);
    12:    transformed_data_real = ordered_probit_lpmf(d_int_array, d_vector,
   -------------------------------------------------

Probability functions with suffixes _lpdf, _lupdf, _lpmf, _lupmf, _cdf, _lcdf and _lccdf, require a vertical bar (|) between the first two arguments.
